samples/_failures_safe/1761201552_05cec6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54616507.c:146:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 | int matrix
      | ^~~
